[gd_scene load_steps=7 format=3 uid="uid://co3amokh5mkhv"]

[ext_resource type="Script" path="res://Lore.gd" id="1_vsjxp"]
[ext_resource type="Theme" uid="uid://bnteruy8vbr4b" path="res://src/main_menu_button.tres" id="2_scyss"]

[sub_resource type="CanvasTexture" id="CanvasTexture_nfcxy"]

[sub_resource type="Animation" id="Animation_qsq1r"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kd8jn"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BGMusic:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.574349),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnham"]
_data = {
"fade_in": SubResource("Animation_qsq1r"),
"fade_out": SubResource("Animation_kd8jn")
}

[node name="Background" type="TextureRect"]
self_modulate = Color(0.270588, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_nfcxy")
script = ExtResource("1_vsjxp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -28.0
offset_right = 0.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Text" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_scyss")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 34
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_scyss")
theme_override_colors/font_color = Color(0.819608, 0.572549, 0.572549, 1)
theme_override_font_sizes/font_size = 34
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ScreenFade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScreenFadeAnim" type="AnimationPlayer" parent="ScreenFade"]
libraries = {
"": SubResource("AnimationLibrary_xnham")
}

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
